--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <!-- <script ENGINE="text/javascript" src="plugins/jquery-3.4.1.min.js"></script> -->
     <script ENGINE="text/javascript" src="plugins/jquery-3.5.1.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
@@ -19,7 +18,16 @@
     <div class="rightWindow">
     </div>
 </div>
-    
+<div class="modal" id="myModal" >
+  <div class="modal-content" id="modal_body">
+    <span class="closeModal">&times;</span>
+    <div class="modal-body">
+      <form>
+      </form>
+    </div>
+  </div>
+</div>
+
     
 </body>
 </html>
